# proj

./: .editorconfig  .envrc  .gitignore  envrc  flake.nix  proj.nix  pyproject.toml  setup.py  vimrc
.github/workflows/: test.yml
lib/: fix_compile_commands.py  lockshaw_config.py
pkgs/: bencher.nix  ff-clang-format.nix  proj-nvim.nix  pytest-skip-slow.nix
pkgs/doctest/: default.nix
pkgs/proj/: default.nix  tests-e2e.nix
proj/: __main__.py  benchmarks.py  browser.py  build.py  checks.py  clang_tools.py  cmake.py  config_file.py  coverage.py  failure.py  fix_compile_commands.py  format.py  gpu_handling.py  hash.py  json.py  lint.py  lockshaw_config.py  logging.py  profile.py  progressbar.py  subprocess_trace.py  target_resolution.py  targets.py  terminal_colors.py  testing.py  toml.py  utils.py  verbosity.py
proj/dtgen/: __init__.py  find_outdated.py  project.py  render.py  render_utils.py  spec.py
proj/dtgen/enum/: render.py  spec.py
proj/dtgen/struct/: render.py  spec.py
proj/dtgen/variant/: render.py  spec.py
snippets/: cpp.snippets
tests/: project_utils.py  test_benchmarks.py  test_cli.py  test_config_file.py  test_example_project_dtgen.py  test_example_project_simple.py  test_project_1.py  test_subprocess_trace.py  test_targets.py
tests/dtgen/: test_example_projects.py  test_find_outdated.py  test_render_utils.py
tests/dtgen/person/: .proj.toml  CMakeLists.txt
tests/dtgen/person/include/: color.enum.toml  coordinate.struct.toml  empty.struct.toml  int_or_bool.variant.toml  my_int_list.variant.toml  my_int_list_cons.struct.toml  my_list.variant.toml  my_list_cons.struct.toml  person.struct.toml  person_indirect.struct.toml  student.struct.toml.disable  variant_holding_optional.variant.toml  wrapper_wrapper_int.struct.toml
tests/dtgen/person/include/fmt/: optional.h
tests/dtgen/person/test/: test.cc  test_color.cc  test_coordinate.cc  test_empty.cc  test_int_or_bool.cc  test_my_int_list.cc  test_my_list.cc  test_my_template_variant.cc  test_person.cc  test_person_indirect.cc  test_variant_holding_optional.cc  test_wrapper_wrapper_int.cc
tests/dtgen/wrapper/: .gitignore  .proj.toml  CMakeLists.txt
tests/dtgen/wrapper/include/: wrapper.struct.toml
tests/dtgen/wrapper/test/: test.cc
tests/e2e/: e2e_utils.py  test_example_project_dtgen.py  test_example_project_gpu.py  test_example_project_simple.py  test_example_project_test_env.py
tests/example-projects/cmake/: doctestlib.cmake  fmt.cmake  gbenchmark.cmake  rapidcheck.cmake  tp-utils.cmake
tests/example-projects/dtgen-2/: .proj.toml  CMakeLists.txt
tests/example-projects/test-env/: .proj.toml  CMakeLists.txt
tests/example-projects/test-env/lib/: CMakeLists.txt
tests/example-projects/test-env/lib/test-env/: CMakeLists.txt
tests/example-projects/test-env/lib/test-env/include/test-env/: test-env.h
tests/example-projects/test-env/lib/test-env/src/test-env/: test-env.cc
tests/example-projects/test-env/lib/test-env/test/: CMakeLists.txt
tests/example-projects/test-env/lib/test-env/test/src/test-env/: test-env.cc
tests/test-project-1/: .proj.toml
vim/UltiSnips/: cpp.snippets
vim/ftplugin/: cpp.vim
(+72 files in other folders)
